--- a/detail/ID_catch_justRethrow.html
+++ b/detail/ID_catch_justRethrow.html
@@ -48,7 +48,7 @@
         throw;      //<i> Non-compliant</i>
     }
 }</code></pre>
-<p>例中的 catch 子句是没有意义的，应将其去掉或对异常进行有效处理。</p>
+<p>例中 catch 子句是没有意义的，往往是残留代码或功能不完整的代码，应将其去掉或对异常进行有效处理。</p>
 
 </main>
 
