--- a/detail/ID_exceptionUnsafe.html
+++ b/detail/ID_exceptionUnsafe.html
@@ -106,7 +106,7 @@ public:
 
     void swap(X&amp;) noexcept;   //<i> Nothrow guarantee</i>
 };</code></pre>
-<p>先处理对象的副本，处理成功后交换副本与对象的数据，交换过程需要保证不抛出异常，这样从对象副本的生成到事务处理完毕的过程中即使抛出异常也不影响对象的状态，实现了强保证。</p>
+<p>先处理对象的副本，处理成功后交换副本与对象的数据，交换过程需要保证不抛出异常，这样从对象副本的生成到事务处理完毕的过程中即使抛出异常也不影响对象的状态，实现了强异常安全保证。</p>
 
 </main>
 
