--- a/detail/ID_nonConstNonStaticGlobalObject.html
+++ b/detail/ID_nonConstNonStaticGlobalObject.html
@@ -43,9 +43,9 @@
 
 <p>示例：</p>
 <pre><code>//<i> In global scope</i>
-int i = 0;          //<i> Non-compliant</i>
-static int j = 0;   //<i> Let it go</i>
-const int k = 0;    //<i> Compliant</i></code></pre>
+int foo;             //<i> Non-compliant</i>
+static int bar;      //<i> Let it go</i>
+const int baz = 0;   //<i> Compliant</i></code></pre>
 
 </main>
 
