--- a/detail/cpp-ub-list.html
+++ b/detail/cpp-ub-list.html
@@ -89,7 +89,7 @@
 <li><a href="./UB/cpp-ub-46.html">未指向同一数组的指针相减</a></li>
 <li><a href="./UB/cpp-ub-47.html">移位运算符右操作数为负数或超过相关类型比特位的数量</a></li>
 <li><a href="./UB/cpp-ub-48.html">对有符号整数进行超出取值范围的左移运算</a></li>
-<li><a href="./UB/cpp-ub-49.html">将对象的值赋给具有部分重叠区域的对象</a></li>
+<li><a href="./UB/cpp-ub-49.html">将对象的值赋给具有部分重叠区域的另一个对象</a></li>
 <li><a href="./UB/cpp-ub-50.html">有返回值的函数没有通过 return 语句返回</a></li>
 <li><a href="./UB/cpp-ub-51.html">递归地定义和初始化静态对象</a></li>
 <li><a href="./UB/cpp-ub-52.html">修改非 mutable 常量对象</a></li>
