--- a/detail/ID_usingSelf.html
+++ b/detail/ID_usingSelf.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：用 using directive 引用当前命名空间属于无效代码，可能意味着某种错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：用 using 指令引用当前命名空间属于无效代码，可能意味着某种错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/search.js"></script>
   <script src="../js/iconfont.js"></script>
-  <title>避免无效的 using directive - C/C++ 安全规则</title>
+  <title>避免无效的 using 指令 - C/C++ 安全规则</title>
 </head>
 <div class="footer-holder">
 <nav>
@@ -27,7 +27,7 @@
 </nav>
 <article>
 <header>
-  <h1>避免无效的 using directive</h1>
+  <h1>避免无效的 using 指令</h1>
   <div id="subtitle">
     <div id="subtitle-id">4.14 ID_usingSelf</div>
     <div id="subtitle-tags">
@@ -37,7 +37,7 @@
   <hr class="solid-hr"/>
 </header>
 <main>
-<p>用 using directive 引用当前命名空间属于无效代码，可能意味着某种错误。</p>
+<p>用 using 指令引用当前命名空间属于无效代码，可能意味着某种错误。</p>
 
 <p>示例：</p>
 <pre><code>namespace NS
