--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <li><a href="./detail/ID_nameTooShort.html">全局名称应遵循合理的命名方式</a></li>
   <li><a href="./detail/ID_missingNamespace.html">为代码设定合理的命名空间</a></li>
   <li><a href="./detail/ID_nonGlobalMain.html">main 函数只应位于全局作用域中</a></li>
-  <li><a href="./detail/ID_usingNamespaceInHeader.html">不应在头文件中使用 using directive</a></li>
+  <li><a href="./detail/ID_usingNamespaceInHeader.html">不应在头文件中使用 using 指令</a></li>
   <li><a href="./detail/ID_staticInHeader.html">不应在头文件中使用静态声明</a></li>
   <li><a href="./detail/ID_anonymousNamespaceInHeader.html">不应在头文件中定义匿名命名空间</a></li>
   <li><a href="./detail/ID_definedInHeader.html">不应在头文件中实现函数或定义对象</a></li>
@@ -217,8 +217,8 @@
   <li><a href="./detail/ID_nonConstNonStaticGlobalObject.html">全局对象只应为常量或静态对象</a></li>
   <li><a href="./detail/ID_nonConstGlobalObject.html">全局对象只应为常量</a></li>
   <li><a href="./detail/ID_staticAndConst.html">全局对象不应同时被 static 和 const 等关键字限定</a></li>
-  <li><a href="./detail/ID_forbidUsingDirectives.html">全局及命名空间作用域中禁用 using directive</a></li>
-  <li><a href="./detail/ID_usingSelf.html">避免无效的 using directive</a></li>
+  <li><a href="./detail/ID_forbidUsingDirectives.html">全局及命名空间作用域中禁用 using 指令</a></li>
+  <li><a href="./detail/ID_usingSelf.html">避免无效的 using 指令</a></li>
   <li><a href="./detail/ID_topInlineNamespace.html">不应定义全局 inline 命名空间</a></li>
   <li><a href="./detail/ID_stdNamespaceModified.html">不可修改 std 命名空间</a></li>
 </ol></li>
